Alignment fix attempt 2

--- a/app/style.css
+++ b/app/style.css
@@ -14,6 +14,7 @@ html {
 body {
     min-height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     font-family: "Exo", monospace;
@@ -99,7 +100,6 @@ img:hover {
     font-size: 1.9rem;
     font-size: clamp(1.9rem, 1.221705426356589rem + 0.18087855297157623vw, 4rem);
     font-weight: 200;
-    height: 80px;
 }
 
 /* Initial prompt and game updates */
@@ -248,7 +248,6 @@ img:hover {
     color: #00FF00;
     padding: 10px;
     border-top: 2px solid #00FF00;
-    position: fixed;
     /* Changed from relative to fixed */
     bottom: 0;
     /* Stick to the bottom */
@@ -264,14 +263,18 @@ img:hover {
 /* Small Devices */
 @media (max-width: 640px) {
     main {
-        margin-bottom: 0;
-        max-width: 550px;
-        max-height: 650px;
-        gap: 40px;
+        max-width: 600px;
+        max-height: 700px;
+        gap: 20px;
     }
 
     .title {
         font-size: 2.5rem;
+    }
+
+    #updates {
+        height: 80px;
+
     }
 
     .scores h2 {
@@ -286,11 +289,7 @@ img:hover {
         max-width: 100px;
     }
 
-    .footer {
-        position: fixed;
-        /* Changed from relative to fixed */
-
-    }
+    .footer {}
 
 
 }
